# FinMod

./: .env.example  .gitignore  FINDINGS.md  LICENSE  Practice_news.ipynb  README.md  TODO.txt  app.py  main.py  practice_browse.ipynb  pyproject.toml
models/alpha_gru_v1/: robust_scaler.pkl
notebooks/: fin_matric.ipynb
results/: daily_predictions.csv  market_predictions.json
scripts/: ai_market_agent.py  dl_alpha_production.py  ml_market_movement.py  news.py  price.py  validate_signal.py  verify_fix.py
tests/: test_risk_manager.py
utils/: connect_db.py  data_models.py  db_operations.py  financial_features.py  get_data.py  polygon_utils.py  risk_manager.py  signal_logger.py
utils/llm/: api_call.py  llm_models.py  prompt.py
