[project]
name = "finmod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.11.2",
    "devtools>=0.12.2",
    "langchain-anthropic>=1.3.0",
    "langchain-core>=1.2.5",
    "langchain-deepseek>=1.0.1",
    "langchain-google-genai>=4.1.2",
    "langchain-groq>=1.1.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "matplotlib>=3.10.8",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "polygon-api-client>=1.16.3",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.54.0",
    "xgboost>=3.1.3",
    "yfinance>=1.0",
]
